# AULA_9-BOOTCAMP-PYTHON

./: README.md  exemplo.csv  exemplo2.csv  principal.py  pyproject.toml  test-class.py  test.py  vendas.csv  vendas.xlsx
